--- a/style.css
+++ b/style.css
@@ -6,10 +6,18 @@ body{
 
 #content{
     display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-auto-rows: minmax(150px, auto);
+    grid-gap: 10px;
     max-width: 960px;
     margin: 0 auto;
 }
 #content div{
     background: #333;
     padding: 30px;
+}
+
+.one{
+    grid-column: 1 / 3;
+    grid-row: 1 / 5;
 }
