--- a/style.css
+++ b/style.css
@@ -13,35 +13,45 @@ body{
     margin: 0 auto;
 }
 #content div{
-    background: #333;
     padding: 30px;
 }
 
 .one{
     grid-column: 1 / 3;
     grid-row: 1 / 5;
+    background-image: url(img/burzowo.jpg);
+    background-size: cover;
 }
 
 .two{
     grid-column: 3 / 7;
     grid-row: 1 / 3;
+    background-image: url(img/slonecznie.jpg);
+    background-size: cover;
 }
 
 .three{
     grid-column: 3 / 5;
     grid-row: 3 / 5;
+    background-image: url(img/piesio.jpg);
+    background-size: cover;
 }
 
 .four{
     grid-column: 5 / 7;
     grid-row: 3 / 7;
+    background-image: url(img/pochmurno.jpg);
+    background-size: cover;
 }
 
 .five{
     grid-column: 1 / 5;
     grid-row: 5 / 7;
+    background-image: url(img/zachód.jpg);
+    background-size: cover;
 }
 
 #content{
     transform: rotateZ(45deg) scale(0.7)
 }
+
