--- a/style.css
+++ b/style.css
@@ -22,12 +22,15 @@ body{
     grid-row: 1 / 5;
     background-image: url(img/burzowo.jpg);
     background-size: cover;
+    background-position: center;
 }
 
 .two{
     grid-column: 3 / 7;
     grid-row: 1 / 3;
     background-image: url(img/slonecznie.jpg);
+    background-repeat:no-repeat;
+    background-position: center;
     background-size: cover;
 }
 
@@ -35,6 +38,8 @@ body{
     grid-column: 3 / 5;
     grid-row: 3 / 5;
     background-image: url(img/piesio.jpg);
+    background-repeat:no-repeat;
+    background-position: center;
     background-size: cover;
 }
 
@@ -42,6 +47,8 @@ body{
     grid-column: 5 / 7;
     grid-row: 3 / 7;
     background-image: url(img/pochmurno.jpg);
+    background-repeat:no-repeat;
+    background-position: center;
     background-size: cover;
 }
 
@@ -49,6 +56,8 @@ body{
     grid-column: 1 / 5;
     grid-row: 5 / 7;
     background-image: url(img/zachód.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
     background-size: cover;
 }
 
