--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body{
     background-repeat:no-repeat;
     background-position: center;
     background-size: cover;
+   
 }
 
 .three{
@@ -41,6 +42,8 @@ body{
     background-repeat:no-repeat;
     background-position: center;
     background-size: cover;
+    transform: rotate(-45deg);
+    
 }
 
 .four{
