--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body{
 .four{
     grid-column: 5 / 7;
     grid-row: 3 / 7;
-    background-image: url(img/pochmurno.jpg);
+    background-image: url(img/slonecznie.jpg);
     background-repeat:no-repeat;
     background-position: center;
     background-size: cover;
