--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body{
 .two{
     grid-column: 3 / 7;
     grid-row: 1 / 3;
-    background-image: url(img/slonecznie.jpg);
+    background-image: url(img/niebieska_woda.jpg);
     background-repeat:no-repeat;
     background-position: center;
     background-size: cover;
@@ -58,7 +58,7 @@ body{
 .five{
     grid-column: 1 / 5;
     grid-row: 5 / 7;
-    background-image: url(img/zachód.jpg);
+    background-image: url(img/plaza_czarnego_piasku.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
